// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color prop is passed successfully 1`] = `
body #PickUpUI .j0 {
  margin: 0;
  padding: 0;
  position: relative;
  vertical-align: baseline;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body #PickUpUI .j1 {
  color: #FF0000;
}

body #PickUpUI .j2 {
  color: inherit;
  font-size: 15px;
  font-style: normal;
  font-family: 'Inter', Helvetica, sans-serif;
  font-weight: normal;
  line-height: 24px;
  letter-spacing: 0.1px;
}

<div>
  <div
    id="PickUpUI"
  >
    <p
      class="j0 j1 j2"
    >
      I am red text!
    </p>
  </div>
</div>
`;

exports[`Renders without crashing, matches snapshot 1`] = `
body #PickUpUI .j0 {
  margin: 0;
  padding: 0;
  position: relative;
  vertical-align: baseline;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body #PickUpUI .j1 {
  color: inherit;
}

body #PickUpUI .j2 {
  color: inherit;
  font-size: 34px;
  font-family: 'Ringside-Condensed', Helvetica, sans-serif;
  font-weight: 600;
  line-height: 38px;
  letter-spacing: 0.1px;
  text-transform: uppercase;
}

<div>
  <div
    id="PickUpUI"
  >
    <h1
      class="j0 j1 j2"
    >
      PlayPickUp
    </h1>
  </div>
</div>
`;
